<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome">
    <TextView android:id="@+id/successLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello, You have logged in successfully!" />

</androidx.constraintlayout.widget.ConstraintLayout>